feat(device) detect brand iTel models: Vision 1 Plus (L6501), Vision 1 Pro (L6502),  W5505 (A36), A44 Air (L5502), A47 (L5505), A48 (L6006), A55 LTE (L6003P), A56 Pro (W6004P)
feat(device) detect brand GIONEE models: A1, F9, S11 Lite

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6173,6 +6173,8 @@ Gionee:
       model: 'P5 mini'
     - regex: 'P7 Max Build'
       model: 'P7 Max'
+    - regex: '(S11) Lite(?:[);/ ]|$)'
+      model: '$1 Lite'
     - regex: '(?:(?:GIO-)?GIONEE[ _-])?Dream_D1(?:[);/ ]|$)'
       model: 'Dream D1'
     - regex: '(?:GIO-)?GIONEE[ _-]([a-z0-9_-]+).*Android'
@@ -8065,8 +8067,18 @@ iTel:
     - regex: 'W6502'
       device: 'phablet'
       model: 'S16'
+    - regex: 'W5505'
+      model: 'A36'
     - regex: 'W6002E?'
       model: 'S15'
+    - regex: 'L5502'
+      model: 'A44 Air'
+    - regex: 'L5505'
+      model: 'A47'
+    - regex: 'L6006'
+      model: 'A48'
+    - regex: 'L6003P'
+      model: 'A55 LTE'
     - regex: 'L6002P'
       model: 'S15 Pro'
     - regex: 'L5002'
@@ -8075,12 +8087,18 @@ iTel:
       model: 'A46'
     - regex: 'L6004'
       model: 'A56 LTE'
+    - regex: 'W6004P'
+      model: 'A56 Pro'
     - regex: 'W6001'
       model: 'P33 Plus'
     - regex: 'W6003'
       model: 'A55'
     - regex: 'L6005'
       model: 'Vision 1'
+    - regex: 'L6501'
+      model: 'Vision 1 Plus'
+    - regex: 'L6502'
+      model: 'Vision 1 Pro'
     - regex: 'GP10X2019'
       model: 'GP10X2019'
     - regex: 'iNote ([^/;]*)Build'
