--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16439,7 +16439,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G)|M2007J1(?:7G|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2006C3MII|M2003J15SC|M2007J3S[ICYG]|M2007J22[CG]|M2101K6[GI]|M2101K[79]AG|M2010J19S[CGYI]|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|MI_5X'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G)|M2007J1(?:7[CG]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2011K2[CG]|M2006C3MII|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2101K6[GI]|M2101K[79]AG|M2010J19S[CGYI]|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|MI_5X'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -16479,7 +16479,9 @@ Xiaomi:
       model: 'MI CC 9'
     - regex: 'Xiaomi_M2001J2E_TD-LTE(?:[);/ ]|$)'
       model: 'MI 10'
-    - regex: 'M2007J3S[CY](?:[);/ ]|$)'
+    - regex: 'M2011K2[CG](?:[);/ ]|$)'
+      model: 'MI 11'
+    - regex: 'M2007J3S[CYP](?:[);/ ]|$)'
       model: 'MI 10T 5G'
     - regex: 'M2007J3S[GI](?:[);/ ]|$)'
       model: 'MI 10T Pro 5G'
@@ -16614,6 +16616,9 @@ Xiaomi:
       device: 'phablet'
     - regex: 'M2007J22C(?:[);/ ]|$)'
       model: 'Redmi Note 9 5G'
+      device: 'phablet'
+    - regex: 'M2007J17C(?:[);/ ]|$)'
+      model: 'Redmi Note 9 Pro 5G'
       device: 'phablet'
     - regex: 'M2101K7AG'
       model: 'Redmi Note 10'
