feat(device) detect brand Asus model: ROG Phone 5 (I005DA) feat(device) detect brand OnePlus models: 9 Pro (LE2120, LE2123), 8T (KB2007)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2590,6 +2590,8 @@ Asus:
       model: 'ROG Phone 2'
     - regex: '(?:ASUS_)?(?:I003DD?|ZS661KS)'
       model: 'ROG Phone 3'
+    - regex: '(?:ASUS_)?(?:I005DA)'
+      model: 'ROG Phone 5'
 
     # watch detections
     - regex: '(?:ASUS_)?ZenWatch( 2)?'
@@ -11539,7 +11541,7 @@ Onda:
 
 # OnePlus
 OnePlus:
-  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE2025|BE202[89]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[0135]|LE2117)(?: Build|\))'
+  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE2025|BE202[89]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[01357]|LE2117|LE212[03])(?: Build|\))'
   device: 'smartphone'
   models:
     - regex: 'AC200[13](?:[);/ ]|$)'
@@ -11564,6 +11566,8 @@ OnePlus:
       model: '8 5G UW'
     - regex: 'LE2117(?:[);/ ]|$)'
       model: '9'
+    - regex: 'LE212[03](?:[);/ ]|$)'
+      model: '9 Pro'
     - regex: '(?:GM191[01357]|OnePlus 7 Pro)(?:[);/ ]|$)'
       model: '7 Pro'
     - regex: 'GM190[0135](?:[);/ ]|$)'
@@ -11574,7 +11578,7 @@ OnePlus:
       model: '7T Pro'
     - regex: '(?:HD1925|GM192[05])(?:[);/ ]|$)'
       model: '7T Pro 5G'
-    - regex: 'KB200[135](?:[);/ ]|$)'
+    - regex: 'KB200[1357](?:[);/ ]|$)'
       model: '8T'
     - regex: 'A0001(?:[);/ ]|$)'
       model: 'One'
