feat(device) detect new brand MAC AUDIO model: S Pro

--- a/regexes/device/car_browsers.yml
+++ b/regexes/device/car_browsers.yml
@@ -14,3 +14,12 @@ Tesla:
       model: 'Model S'
     - regex: 'Tesla/[0-9.]+'
       model: ''
+
+# Mac Audio
+MAC AUDIO:
+  regex: 'Mac Audio Spro'
+  device: 'car browser'
+  models:
+    - regex: 'Spro'
+      model: 'S Pro'
+
