--- a/Tests/fixtures/car_browser.yml
+++ b/Tests/fixtures/car_browser.yml
@@ -107,3 +107,21 @@
     model: KZCAR
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11.0.0; Mac Audio Spro) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4389.105 Safari/537.36
+  os:
+    name: Android
+    version: 11.0.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 89.0.4389.105
+    engine: Blink
+    engine_version: ""
+  device:
+    type: car browser
+    brand: MAC AUDIO
+    model: S Pro
+  os_family: Android
+  browser_family: Chrome
