--- a/Tests/fixtures/car_browser.yml
+++ b/Tests/fixtures/car_browser.yml
@@ -125,3 +125,39 @@
     model: S Pro
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; OCTA-CORE T8) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.181 Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 88.0.4324.181
+    engine: Blink
+    engine_version: ""
+  device:
+    type: car browser
+    brand: Allwinner
+    model: QUAD-CORE T8
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; sp9853i_1h10_vmm) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.101 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 85.0.4183.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: car browser
+    brand: Topway
+    model: TS9
+  os_family: Android
+  browser_family: Chrome
