--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -641,7 +641,7 @@
   name: 'iOS'
   version: '$1'
 
-- regex: '(?:Podcasts/(?:[\d\.]+)|Instacast(?:HD)?/(?:\d\.[\d\.abc]+)|Pocket Casts, iOS|\(iOS\)|Overcast|Castro|Podcat|iCatcher|RSSRadio/|MobileSafari/)(?!.*x86_64)'
+- regex: '(?:Podcasts/(?:[\d\.]+)|Instacast(?:HD)?/(?:\d\.[\d\.abc]+)|Pocket Casts, iOS|\(iOS\)|iOS; Opera|Overcast|Castro|Podcat|iCatcher|RSSRadio/|MobileSafari/)(?!.*x86_64)'
   name: 'iOS'
   version: ''
 
@@ -656,11 +656,6 @@
 - regex: 'Sonos/.+\(ICRU_'
   name: 'iOS'
   version: ''
-
-- regex: 'iOS; (?!\d+)'
-  name: 'iOS'
-  version: ''
-
 
 ##########
 # Mac
