--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2989,7 +2989,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|1819|V201[12]A|V202[0345]C?A|V202[235679]|V2054A|V203[026]|V204[03]|V2049A|X50 Pro\+)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V2054A|V203[026]|V204[03]|V2049A|X50 Pro\+)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3112,6 +3112,8 @@ Vivo:
       model: 'Y19'
     - regex: 'V202[79](?:[);/ ]|$)'
       model: 'Y20'
+    - regex: 'V2028(?:[);/ ]|$)'
+      model: 'Y11s'
     - regex: 'V2043(?:[);/ ]|$)'
       model: 'Y20 (2021)'
     - regex: 'V2032(?:[);/ ]|$)'
@@ -11610,7 +11612,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[56]|[234]0)|21(?:03|[12]1|42|55|63|7[60]|8[059])|2200|18(0[1579]|11|3[13]|2[157]|[45]1|45)|3201|3031|3063)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[56]|[234]0)|21(?:03|17|[12]1|42|5[15]|63|7[60]|8[059])|2200|18(0[1579]|11|3[13]|2[157]|[45]1|45)|3201|30[38]1||3063)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -11633,6 +11635,8 @@ Realme:
       model: 'X2 Dual'
     - regex: 'RMX1931|Realme X2 Pro(?:[);/ ]|$)'
       model: 'X2 Pro'
+    - regex: 'RMX2117'
+      model: 'Q2 5G'
     - regex: 'RMX2176(?:[);/ ]|$)'
       model: 'X7 5G'
     - regex: 'RMX2121(?:[);/ ]|$)'
@@ -11653,12 +11657,14 @@ Realme:
       model: '6S'
     - regex: 'RMX206[13](?:[);/ ]|$)'
       model: '6 Pro'
-    - regex: 'RMX2155'
+    - regex: 'RMX215[15]'
       model: '7'
     - regex: 'RMX2103'
       model: '7I'
     - regex: 'RMX2170'
       model: '7 Pro'
+    - regex: 'RMX3081'
+      model: '8 Pro'
     - regex: 'RMX1925(?:[);/ ]|$)'
       model: '5S'
     - regex: 'RMX1811(?:[);/ ]|$)'
@@ -12237,7 +12243,7 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T790Y|T766H_EEA|T766A|T799[BH]|Percee TV)(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T671H|T790Y|T766H_EEA|T766A|T799[BH]|Percee TV)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
@@ -12268,6 +12274,8 @@ TCL:
       model: '10L'
     - regex: 'T766[HA](?:_EEA)?(?:[);/ ]|$)'
       model: '10 SE'
+    - regex: 'T671H(?:_EEA)?(?:[);/ ]|$)'
+      model: '20 SE'
     - regex: 'T799[BH](?:[);/ ]|$)'
       model: '10 Pro'
 
@@ -16443,7 +16451,7 @@ POCO:
       model: 'M2'
     - regex: '(?:M2007J20CG|POCO X3 NFC)(?:[);/ ]|$)'
       model: 'X3 NFC'
-    - regex: 'M2007J20CI(?:[);/ ]|$)'
+    - regex: '(?:M2007J20CI|POCO X3)(?:[);/ ]|$)'
       model: 'X3'
     - regex: 'M2102J20SG(?:[);/ ]|$)'
       model: 'X3 Pro'
