--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -71,3 +71,147 @@
     model: TF-LED40S63T2S
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: BrightSign/35D6AA000662/6.2.80.1 (HD1023) Mozilla/5.0 (Unknown; Linux arm) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.6.0 Chrome/45.0.2454.101 Safari/537.36
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: QtWebEngine
+    version: 5.6.0
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: BrightSign
+    model: HD1023
+  os_family: GNU/Linux
+  browser_family: Chrome
+-
+  user_agent: BrightSign/R3G75N003767/7.0.60 (XD233) Mozilla/5.0 (Unknown; Linux arm) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.6.0 Chrome/45.0.2454.101 Safari/537.36
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: QtWebEngine
+    version: 5.6.0
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: BrightSign
+    model: XD233
+  os_family: GNU/Linux
+  browser_family: Chrome
+-
+  user_agent: BrightSign/X1G389001947/6.1.100 (XD1030) Mozilla/5.0 (Unknown; Linux mips) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.4.3 Chrome/37.0.2062.103 Safari/537.36
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: MIPS
+  client:
+    type: browser
+    name: QtWebEngine
+    version: 5.4.3
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: BrightSign
+    model: XD1030
+  os_family: GNU/Linux
+  browser_family: Chrome
+-
+  user_agent: BrightSign/8.2.35.4 (XT1144-PP) Mozilla/5.0 (X11; Linux aarch64) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.12.3 Chrome/69.0.3497.128 Safari/537.36
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: QtWebEngine
+    version: 5.12.3
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: BrightSign
+    model: XT1144
+  os_family: GNU/Linux
+  browser_family: Chrome
+-
+  user_agent: BrightSign/7.0.60 (XT1143) Mozilla/5.0 (Unknown; Linux arm) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.6.0 Chrome/45.0.2454.101 Safari/537.36
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: QtWebEngine
+    version: 5.6.0
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: BrightSign
+    model: XT1143
+  os_family: GNU/Linux
+  browser_family: Chrome
+-
+  user_agent: BrightSign/X3K4A8000366/8.0.33 (4K1142)Mozilla/5.0 (X11; Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.11.2 Chrome/65.0.3325.230 Safari/537.36
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: QtWebEngine
+    version: 5.11.2
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: BrightSign
+    model: 4K1142
+  os_family: GNU/Linux
+  browser_family: Chrome
+-
+  user_agent: BrightSign/4.8.108 (XD230) Mozilla/5.0 (compatible; Linux mips) AppleWebKit/537.4 (KHTML, like Gecko) Chromium/18.0.1025.168 Chrome/18.0.1025.168 Safari/537.4
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: MIPS
+  client:
+    type: browser
+    name: Chromium
+    version: 18.0.1025.168
+    engine: WebKit
+    engine_version: "537.4"
+  device:
+    type: tv
+    brand: BrightSign
+    model: XD230
+  os_family: GNU/Linux
+  browser_family: Chrome
+-
+  user_agent: BrightSign/8.0.48 (LS424-W)Mozilla/5.0 (X11; Linux aarch64) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.11.2 Chrome/65.0.3325.230 Safari/537.36
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: QtWebEngine
+    version: 5.11.2
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: BrightSign
+    model: LS424
+  os_family: GNU/Linux
+  browser_family: Chrome
