--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -4705,3 +4705,21 @@
     model: Dash M2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 9; en-US; RAVOZ_Z6 Build/PPR1.180610.011) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.108 UCBrowser/13.3.5.1304 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 13.3.5.1304
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Ravoz
+    model: Z6
+  os_family: Android
+  browser_family: Unknown
