feat(device) detect brand Ravoz models: Z5 Pro, Z5, Z5 Lite feat(device) detect brand Xiaomi models: Redmi 9i (M2006C3LII), MI 10i (M2007J17I) feat(device) detect brand POCO model: X3 NFC (M2007J20CT) feat(device) detect brand T-Mobile models: REVVL 4 Plus (5062Z, 5062W), REVVL 4 (5007Z, 5007W)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15011,9 +15011,13 @@ G-Touch:
 
 # T-Mobile
 T-Mobile:
-  regex: 'T-Mobile[ _][a-z0-9 ]+|REVVLRY|REVVL 2( PLUS)?(?:[);/ ]|$)'
+  regex: 'T-Mobile[ _][a-z0-9 ]+|(?:REVVLRY|REVVL 2(?: PLUS)?|5062[ZW]|5007[ZW])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: '5062[ZW]'
+      model: 'REVVL 4 Plus'
+    - regex: '5007[ZW]'
+      model: 'REVVL 4'
     - regex: 'REVVL 2 PLUS'
       model: 'REVVL 2 Plus'
     - regex: 'REVVLRY'
@@ -16460,7 +16464,7 @@ X-View:
 
 # POCO (sub brand Xiaomi)
 POCO:
-  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M[32])|M2007J20CG|M2010J19C[GI]|M2007J20CI|M2012K11AG|M2006C3MI|M2004J19PI|M2102J20SG)(?:[);/ ]|$)'
+  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M[32])|M2010J19C[GI]|M2007J20C[ITG]|M2012K11AG|M2006C3MI|M2004J19PI|M2102J20SG)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'POCO X2(?:[);/ ]|$)'
@@ -16473,7 +16477,7 @@ POCO:
       model: 'M2'
     - regex: 'POCO M2 Pro(?:[);/ ]|$)'
       model: 'M2 Pro'
-    - regex: '(?:M2007J20CG|POCO X3 NFC)(?:[);/ ]|$)'
+    - regex: '(?:M2007J20C[GT]|POCO X3 NFC)(?:[);/ ]|$)'
       model: 'X3 NFC'
     - regex: '(?:M2007J20CI|POCO X3)(?:[);/ ]|$)'
       model: 'X3'
@@ -16486,7 +16490,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G)|M2007J1(?:7[CG]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11C|M2011K2[CG]|M2006C3MII|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2101K6[GI]|M2101K(?:[79]AG|7AI)|M2010J19S[CGYI]|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|MI_5X'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G)|M2007J1(?:7[CGI]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11C|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2101K6[GI]|M2101K(?:[79]AG|7AI)|M2010J19S[CGYI]|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|MI_5X'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -16538,6 +16542,8 @@ Xiaomi:
       model: 'MI 10 Ultra 5G'
     - regex: '(?:M2002J9[EG]|XIG01)(?:[);/ ]|$)'
       model: 'MI 10 Lite 5G'
+    - regex: 'M2007J17I(?:[);/ ]|$)'
+      model: 'MI 10i'
     - regex: 'M2101K9AG(?:[);/ ]|$)'
       model: 'MI 11 Lite'
     - regex: 'Mi 9T Pro(?:[);/ ]|$)'
@@ -16588,6 +16594,8 @@ Xiaomi:
       model: 'Redmi 9 Power'
     - regex: 'M2006C3L[GCI](?:[);/ ]|$)'
       model: 'Redmi 9A'
+    - regex: 'M2006C3LII(?:[);/ ]|$)'
+      model: 'Redmi 9i'
     - regex: 'M2006C3MG(?:[);/ ]|$)'
       model: 'Redmi 9C'
     - regex: 'M2006C3LVG(?:[);/ ]|$)'
@@ -19367,7 +19375,7 @@ TD Systems:
 
 # Ravoz
 Ravoz:
-  regex: 'RAVOZ[ _](Z[3467]|R[478])(?:[);/ ]|$)'
+  regex: 'RAVOZ[ _](Z5 (?:Lite|Pro)|Z[3-7]|R[478])(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
