feat(device) detect brand Tecno Mobile model: Spark 6 Go (KE5j) feat(device) detect brand Yes model: Altitude 3 (M685Y4) feat(device) detect brand Tecno Mobile models: Narzo 20 Pro (RMX2161), X50 5G (RMX2144) feat(device) detect brand Mobiistar models: C2, C1, C1 Shine, E1

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10543,7 +10543,7 @@ Mobiistar:
       model: 'Kat 452'
     - regex: 'mobiistar_LAI_YOLLO Build'
       model: 'Lai Yollo'
-    - regex: 'Mobiistar[ _]([^;/]+) Build'
+    - regex: 'Mobiistar[ _]([^;/)]+)(?: Build|[;)])'
       model: '$1'
 
 # MSI (msi.com)
@@ -11654,7 +11654,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|42|5[15]|63|7[60]|8[059]|9[35])|2200|18(0[1579]|11|3[13]|2[157]|[45]1|45)|3201|30[38]1|3063)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[60]|8[059]|9[35])|2200|18(0[1579]|11|3[13]|2[157]|[45]1|45)|3201|30[38]1|3063)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -11729,7 +11729,7 @@ Realme:
       model: 'C20'
     - regex: 'RMX3031(?:[);/ ]|$)'
       model: 'GT Neo'
-    - regex: 'RMX2163(?:[);/ ]|$)'
+    - regex: 'RMX216[13](?:[);/ ]|$)'
       model: 'Narzo 20 Pro'
     - regex: 'RMX2193(?:[);/ ]|$)'
       model: 'Narzo 20'
@@ -11737,7 +11737,7 @@ Realme:
       model: 'Narzo 20A'
     - regex: 'RMX1831(?:[);/ ]|$)'
       model: 'U1'
-    - regex: 'RMX20(?:51|[2]5)(?:[);/ ]|$)'
+    - regex: 'RMX(?:20(?:51|[2]5)|2144)(?:[);/ ]|$)'
       model: 'X50 5G'
     - regex: 'RMX2071(?:[);/ ]|$)'
       model: 'X50 Pro'
@@ -15116,6 +15116,8 @@ Tecno Mobile:
       model: 'W3'
     - regex: 'TECNO[ _]F4 Pro(?:[);/ ]|$)'
       model: 'F4 Pro'
+    - regex: 'TECNO[ _]KE5j(?:[);/ ]|$)'
+      model: 'Spark 6 Go'
     - regex: 'TECNO[ _]ID6(?:[);/ ]|$)'
       model: 'Camon iClick 2'
     - regex: 'Tecno[ _]7C(?:[);/ ]|$)'
@@ -16813,13 +16815,15 @@ Yarvik:
 
 # Yes
 'Yes':
-  regex: 'M631Y|M651G_MY|YES (MPY(?:48|54))'
+  regex: 'M631Y|M685Y4|M651G_MY|YES (MPY(?:48|54))'
   device: 'smartphone'
   models:
     - regex: 'M631Y'
       model: 'Altitude'
     - regex: 'M651G_MY'
       model: 'Altitude 2'
+    - regex: 'M685Y4'
+      model: 'Altitude 3'
     - regex: 'YES (MPY(?:48|54))'
       model: '$1'
 
