feat(device) detect brand LG model: G6 (LG-H873)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9390,7 +9390,7 @@ LG:
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
-    - regex: 'VS988|LG-H870DS'
+    - regex: 'VS988|LG-H87(?:0DS|3)'
       model: 'G6'
     - regex: 'LM-Q850'
       model: 'G7 Fit'
