feat(device) detect brand LG models: V30 (LG-H932PR, LG-H933, LG-H932PR) feat(device) detect brand LG models: V30 (LG-H930, LG-H931, LG-H932) feat(device) detect brand LG models: V30 (LGM-V300K, LGM-V300L, LGM-V300S) feat(device) detect brand LG models: V30 (LG-H932PR, LG-AS998)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9548,7 +9548,7 @@ LG:
       model: 'V20'
     - regex: '(?:LG-)?US999'
       model: 'V20'
-    - regex: 'VS996'
+    - regex: '(?:VS996|LG-(?:H933|H93[012]|H932PR|[LU]S998|AS998)|LGM-V300[KLS])(?:[);/ ]|$)'
       model: 'V30'
     - regex: 'L-01J(?:[);/ ]|$)'
       model: 'V20 Pro'
