feat(device) detect brand LG models: V30 Plus (LGV35) feat(device) detect brand QMobile models: LT950 feat(device) detect brand Yezz models: LIV1

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9552,7 +9552,7 @@ LG:
       model: 'V30'
     - regex: 'L-01J(?:[);/ ]|$)'
       model: 'V20 Pro'
-    - regex: 'L-01K(?:[);/ ]|$)'
+    - regex: '(?:L-01K|LGV35)(?:[);/ ]|$)'
       model: 'V30 Plus'
     - regex: 'L-51A(?:[);/ ]|$)'
       model: 'V60'
@@ -14523,9 +14523,9 @@ Qilive:
       model: '$1'
       device: 'tablet'
 
-# QMobile
+# QMobile (qmobile.com.pk)
 QMobile:
-  regex: 'QMobile|QTab(?!10EW)|Q-Smart|(?:Noir X1S|LUNA PRO|NICE S|JazzX JS(?:[27]|10)(?: PRO)?|LT500 PRO|Q Infinity)(?:[);/ ]|$)'
+  regex: 'QMobile|QTab(?!10EW)|Q-Smart|(?:Noir X1S|LUNA PRO|NICE S|JazzX JS(?:[27]|10)(?: PRO)?|LT500 PRO|LT950|Q Infinity)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'JazzX JS7 PRO'
@@ -14546,6 +14546,8 @@ QMobile:
       model: 'Q Infinity E Lite'
     - regex: 'Q Infinity ([FCB])'
       model: 'Q Infinity $1'
+    - regex: '(LT950)(?:[);/ ]|$)'
+      model: '$1'
     # general detections
     - regex: 'QTab[ _-]([^;/]+) Build'
       model: '$1 Tab'
@@ -16829,7 +16831,7 @@ Yarvik:
 
 # Yezz
 Yezz:
-  regex: 'Yezz|ANDY[ _]|4E4|A5EI'
+  regex: 'Yezz|ANDY[ _]|(?:4E4|A5EI|LIV1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '4E4'
@@ -16840,6 +16842,8 @@ Yezz:
       model: 'Andy A4M'
     - regex: 'A5EI'
       model: 'Andy A5EI'
+    - regex: 'LIV1'
+      model: 'LIV1'
 
     - regex: 'Andy[ _]([A-Z]*[0-9]\.[0-9][A-Z0-9]*)(?:[ _](LTE))?'
       model: 'Andy $1 $2'
