feat(device) detect new brand Kyowon model: KA-E410W feat(device) detect brand Samsung model: Galaxy Tab S 8.4" LTE (SM-T707V), Mamorino 5 (KYF40) feat(device) detect brand Kyocera models: Torque 5G (KYG01), feat(device) test for brand Koobee model: F2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8483,7 +8483,7 @@ Diva:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-[0-9]{4}|(?:QC6035|NP501KC|302KC|503KC|602KC|705KC|901KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[13-9]|KYT3[123]|KYF3[123579]|KYX31|KYY2[1-4]|S2151|KC-S701|S[468]-KC|KYV40U?|KYV4[1-8]|KYV4[47]|KC-S301AE|X3-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?|[47]04KC|A001KC|WX10K|URBANO PROGRESSO|E7110)(?:[-_]u2?)?(?:[);/ ]|$)'
+  regex: 'Kyocera|KWC-|QC-[0-9]{4}|(?:QC6035|NP501KC|302KC|503KC|602KC|705KC|901KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[13-9]|KYT3[123]|KYF3[123579]|KYF40|KYX31|KYG01|KYY2[1-4]|S2151|KC-S701|S[468]-KC|KYV40U?|KYV4[1-8]|KYV4[47]|KC-S301AE|X3-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?|[47]04KC|A001KC|WX10K|URBANO PROGRESSO|E7110)(?:[-_]u2?)?(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -8545,6 +8545,8 @@ Kyocera:
       model: 'DuraForce Ultra 5G'
     - regex: 'KC-S701'
       model: 'Torque'
+    - regex: 'KYG01'
+      model: 'Torque 5G'
     - regex: 'KYL21(?:[);/ ]|$)'
       model: 'Digno S'
     - regex: 'KYL23(?:[);/ ]|$)'
@@ -8555,6 +8557,8 @@ Kyocera:
       model: 'Easy Mobile Phone'
     - regex: 'KYF35(?:[);/ ]|$)'
       model: 'Marvera'
+    - regex: 'KYF40(?:[);/ ]|$)'
+      model: 'Mamorino 5'
     - regex: 'KYF3[179](?:[);/ ]|$)'
       model: 'Gratina 4G'
     - regex: 'KYV48(?:[);/ ]|$)'
@@ -11028,7 +11032,7 @@ Navon:
       device: 'tablet'
       model: 'Vision Tab $1'
 
-# NOA
+# NOA or NOA Mobile
 NOA:
   regex: '(?:NOA-)?NOA[ _]|Hummer(?:_2019_R|LE)|NextSE'
   device: 'smartphone'
@@ -12892,7 +12896,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T700'
       device: 'tablet'
       model: 'Galaxy Tab S 8.4" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-(?:T705|T707A)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T705|T707[AV])'
       device: 'tablet'
       model: 'Galaxy Tab S 8.4" LTE'
     - regex: '(?:SAMSUNG-)?SM-T800'
@@ -20949,7 +20953,7 @@ Smailo:
   device: 'tablet'
   model: '$1'
 
-# Colors or Colors Mobile (www.colors-mobile.com)
+# Colors or ColorsMobile (www.colors-mobile.com)
 Colors:
   regex: '(?:Colors[ _](S(?:[19]|11)|P70|P[456]5|P32|E15|P50 Plus)|Pride_1A|P52_Pride5C|P90_Pride5X)(?:[);/ ]|$)'
   device: 'smartphone'
@@ -21868,3 +21872,9 @@ Greentel:
   models:
     - regex: 'X1_Light_Lte'
       model: 'X1 Light LTE'
+
+# Kyowon
+Kyowon:
+  regex: '(KA-E410W)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
