--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4248,20 +4248,38 @@
   os_family: Android
   browser_family: Chrome
 -
-  user_agent: Mozilla/5.0 (Linux; Android 9; Zenfone Max Pro M2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Mobile Safari/537.36
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SM-T707V) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.90 Safari/537.36
   os:
     name: Android
-    version: "9"
+    version: 6.0.1
     platform: ""
   client:
     type: browser
-    name: Chrome Mobile
-    version: 72.0.3626.121
+    name: Chrome
+    version: 73.0.3683.90
     engine: Blink
     engine_version: ""
   device:
-    type: smartphone
-    brand: Asus
-    model: ZenFone Max Pro M2
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab S 8.4" LTE
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.2; KA-E410W) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Safari/537.36
+  os:
+    name: Android
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 71.0.3578.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Kyowon
+    model: KA-E410W
   os_family: Android
   browser_family: Chrome
