feat(device) detect brand LG models: G5 (LG-H868), G Pad F 7.0" (LGLK430)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9390,7 +9390,7 @@ LG:
       model: 'G4s'
     - regex: 'LG-H735'
       model: 'G4 Beat'
-    - regex: 'LG-H8(?:20|3[01]|5[08]|60)|VS987|RS988'
+    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988'
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
@@ -9648,6 +9648,9 @@ LG:
 
     - regex: 'LGUK410'
       model: 'G Pad 7.0" LTE'
+      device: 'tablet'
+    - regex: 'LGLK430'
+      model: 'G Pad F 7.0"'
       device: 'tablet'
     - regex: 'LG-V490'
       model: 'G Pad 8.0'
