--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4283,3 +4283,21 @@
     model: KA-E410W
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0.1; LGLK430 Build/LRX21Y) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.111 Safari/537.36
+  os:
+    name: Android
+    version: 5.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 42.0.2311.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: LG
+    model: G Pad F 7.0"
+  os_family: Android
+  browser_family: Chrome
