feat(device) detect new brand LT Mobile models: Note 10S (LT-NOTE 10S)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21884,3 +21884,11 @@ Kyowon:
   regex: '(KA-E410W)(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
+
+# LT Mobile or LT Electronics (lt-smartphone.com)
+LT Mobile:
+  regex: '(?:LT-NOTE 10S)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'LT-NOTE 10S'
+      model: 'Note 10S'
